Add fatjar for kllma cli